<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/meeting_menu_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/meeting_menu_filter_room"
        android:icon="@drawable/ic_filter_list_24"
        android:title="@string/filter_room"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/meeting_menu_filter_hour"
        android:icon="@drawable/ic_time_24"
        android:title="@string/filter_hour"
        app:showAsAction="ifRoom" />

</menu>