...
            android:id="@+id/meeting_item_tv_topic"
            style="@style/Widget.MaReu.TextView.Topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@id/meeting_item_tv_participants"
            app:layout_constraintEnd_toStartOf="@id/meeting_item_iv_delete"
            app:layout_constraintStart_toEndOf="@id/meeting_item_iv_room"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@sample/meeting.json/data/text" />

        <TextView
            android:id="@+id/meeting_item_tv_participants"
...
